# swarmfi

./: README.md
.initia/: submission.json
agents/market_maker_agents/: __init__.py
agents/orchestrator/: __init__.py  agent_manager.py  health_monitor.py  main.py
agents/price_agents/: __init__.py  base.py  coingecko_agent.py  dex_agent.py  news_agent.py
agents/resolution_agents/: __init__.py
agents/risk_agents/: __init__.py
agents/shared/: __init__.py  chain_interface.py  config.py  consensus.py  logger.py  stigmergy.py  types.py
config/: swarmfi-rollup.json
contracts/: Cargo.toml
contracts/bridge-adapter/: Cargo.toml
contracts/bridge-adapter/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/prediction-market/: Cargo.toml
contracts/prediction-market/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/reputation-registry/: Cargo.toml
contracts/reputation-registry/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/swarm-oracle/: Cargo.toml
contracts/swarm-oracle/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/vault-manager/: Cargo.toml
contracts/vault-manager/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
docs/: DEPLOYMENT.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: SwarmVisualization.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/lib/: mock-data.ts  wallet.tsx
scripts/: deploy-appchain.sh
(+6 files in other folders)
