[workspace]
members = [
    "swarm-oracle",
    "prediction-market",
    "vault-manager",
    "reputation-registry",
    "bridge-adapter",
]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "MIT"
repository    = "https://github.com/swarmfi/contracts"

[workspace.dependencies]
cosmwasm-std   = "2.1.0"
cosmwasm-schema = "2.1.0"
cosmwasm-storage = "2.1.0"
cw-storage-plus = "2.0.0"
schemars       = "0.8"
serde          = { version = "1.0", default-features = false, features = ["derive"] }
serde_json     = "1.0"
thiserror      = "1.0"
